--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,61 @@
 @import './variables.scss';
 @import './config.scss';
 
-@import './variables.scss';
+// Navbar
+.navbar {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    min-height: 10vh;
+}
+
+.nav-links {
+    display: flex;
+    justify-content: flex-end;
+    width: 75%;
+    list-style: none;
+
+    .nav-item {
+        margin: 0.5rem;
+        font-size: 1.2rem;
+    }
+
+    .active {
+        font-weight: 700;
+    }
+}
+
+.logo {
+    text-transform: uppercase;
+    font-size: 14px;
+    border: 1px solid $text-color;
+    padding: 0.5rem;
+    font-weight: 200;
+    font-family: 'Crimson Pro', serif;
+}
+
+.burger {
+    cursor: pointer;
+    display: none;
+}
+
+.burger div {
+    background-color: $text-color;
+    height: 2px;
+    width: 28px;
+    margin: 5px;
+    transition: transform 0.3s ease;
+}
+
+.toggle .line-1 {
+    transform: rotate(-45deg) translate(-5px, 6px);
+}
+.toggle .line-2 {
+    opacity: 0;
+}
+.toggle .line-3 {
+    transform: rotate(45deg) translate(-5px, -6px);
+}
+
+@import './mobile.scss';
