--- a/scss/main.scss
+++ b/scss/main.scss
@@ -58,4 +58,59 @@
     transform: rotate(45deg) translate(-5px, -6px);
 }
 
+// Showcase
+.showcase {
+    height: 90vh;
+}
+
+.showcase-wrapper {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 4rem;
+    margin-right: 2rem;
+    .lead {
+        font-size: 1.5rem;
+        line-height: 1.3;
+        margin-bottom: 4rem;
+        font-weight: 300;
+    }
+}
+
+.text-content {
+    align-self: flex-start;
+    width: 50%;
+    margin-right: 1rem;
+}
+
+.image-content {
+    position: relative;
+    width: 50%;
+}
+
+.interior-img {
+    width: 100%;
+}
+
+.read-link {
+    font-weight: 600;
+}
+
+.text-block {
+    position: absolute;
+    max-height: 189px;
+    max-width: 410px;
+    background-color: $background-color;
+    bottom: -70px;
+    right: 20px;
+    padding: 1rem;
+    margin-bottom: 2rem;
+}
+
+.profile-pic {
+    width: 25%;
+    border-radius: 50%;
+}
+
 @import './mobile.scss';
