--- a/scss/config.scss
+++ b/scss/config.scss
@@ -6,10 +6,13 @@
     box-sizing: border-box;
 }
 
-html,
-body {
+html {
     height: 100%;
     width: 100%;
+}
+
+body {
+    min-height: 100%;
 }
 
 body {
@@ -17,15 +20,16 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 
+main {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
 body,
 a,
 span {
     color: $text-color;
-}
-
-main {
-    position: relative;
-    height: 100%;
 }
 
 h1 {
