--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -2,25 +2,24 @@
 
 // For mobile phones
 @media screen and (max-width: 768px) {
-    main {
+    body {
         overflow-x: hidden;
     }
     .nav-links {
         position: absolute;
         right: 0;
-        height: 92vh;
+        height: 100%;
         top: 8vh;
+        bottom: 0;
         width: 100%;
-        background-color: darken(
-            $color: $burger-background-color,
-            $amount: 10%
-        );
+        background-color: darken($color: $background-color, $amount: 10%);
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: space-evenly;
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
+        z-index: 4;
     }
 
     .nav-item {
@@ -33,11 +32,13 @@
 
     .burger {
         display: block;
+        z-index: 999;
     }
 
     .showcase-wrapper {
         flex-direction: column;
-        
+        justify-content: center;
+
         .lead {
             margin-bottom: 1.5rem;
         }
