--- a/scss/config.scss
+++ b/scss/config.scss
@@ -13,6 +13,7 @@ html {
 
 body {
     min-height: 100%;
+    position: relative;
 }
 
 body {
@@ -21,9 +22,9 @@ body {
 }
 
 main {
-    position: relative;
+    // position: relative;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
 }
 
 body,
