--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    min-height: 10vh;
+    min-height: 8vh;
 }
 
 .nav-links {
@@ -95,7 +95,7 @@
     max-height: 189px;
     max-width: 410px;
     background-color: $background-color;
-    bottom: -70px;
+    bottom: -150px;
     right: 5%;
     padding: 1rem;
     margin-bottom: 2rem;
@@ -124,6 +124,16 @@
         font-size: 12px;
         font-weight: 500;
     }
+}
+
+// footer
+.main-footer {
+    position: absolute;
+    bottom: -190px;
+    left: 0;
+    right: 0;
+    padding: 1rem 0;
+    text-align: center;
 }
 
 @import './mobile.scss';
