--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,6 +8,10 @@
     justify-content: space-around;
     align-items: center;
     min-height: 8vh;
+
+    .fas {
+        cursor: pointer;
+    }
 }
 
 .nav-links {
@@ -29,7 +33,7 @@
 .logo {
     text-transform: uppercase;
     font-size: 14px;
-    border: 1px solid $text-color;
+    border: 1px solid $background-color;
     padding: 0.5rem;
     font-weight: 200;
     font-family: 'Crimson Pro', serif;
@@ -41,7 +45,7 @@
 }
 
 .burger div {
-    background-color: $text-color;
+    background-color: $background-color;
     height: 2px;
     width: 28px;
     margin: 5px;
@@ -63,6 +67,11 @@
     display: flex;
     align-items: center;
     margin-top: 4rem;
+
+    h4 {
+        font-family: 'Lora', sans-serif;
+    }
+
     .lead {
         font-size: 1.5rem;
         line-height: 1.3;
@@ -94,7 +103,7 @@
     position: absolute;
     max-height: 189px;
     max-width: 410px;
-    background-color: $background-color;
+    background-color: $text-color;
     bottom: -150px;
     right: 5%;
     padding: 1rem;
@@ -126,14 +135,25 @@
     }
 }
 
+.more-info {
+    h6 {
+        font-family: 'Lora', sans-serif;
+    }
+}
+
 // footer
 .main-footer {
     position: absolute;
-    bottom: -190px;
+    bottom: -210px;
     left: 0;
     right: 0;
-    padding: 1rem 0;
+    padding: 0.5rem 0;
     text-align: center;
+    a {
+        &:hover {
+            text-decoration: none;
+        }
+    }
 }
 
 @import './mobile.scss';
