--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -6,6 +6,26 @@
         overflow-x: hidden;
     }
 
+    h1 {
+        font-size: 3.5rem;
+    }
+
+    h2 {
+        font-size: 2.5rem;
+    }
+
+    h3 {
+        font-size: 2rem;
+    }
+
+    h4 {
+        font-size: 1.5rem;
+    }
+
+    h6 {
+        font-size: 1rem;
+    }
+
     .burger {
         position: fixed;
         right: 0;
@@ -25,6 +45,10 @@
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
         z-index: 4;
+
+        a {
+            color: $text-color;
+        }
     }
 
     .nav-item {
