--- a/scss/main.scss
+++ b/scss/main.scss
@@ -46,7 +46,8 @@
 
 .burger div {
     background-color: $background-color;
-    height: 2px;
+    font-weight: 800;
+    height: 3px;
     width: 28px;
     margin: 5px;
     transition: transform 0.3s ease;
