--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -34,10 +34,9 @@
         position: fixed;
         right: 0;
         height: 100%;
-        // top: 5vh;
         bottom: 0;
         width: 100%;
-        background-color: darken($color: $background-color, $amount: 10%);
+        background-color: $text-color;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -45,10 +44,6 @@
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
         z-index: 4;
-
-        a {
-            color: $text-color;
-        }
     }
 
     .nav-item {
